Datenbankeinträge können bearbeitet, gelöscht, hinzugefügt werden

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,6 +84,81 @@
     <string name="koerper.teil.seitebeide">beide Seiten</string>
 
     <!-- Fischarten -->
+    <string name="art.europa.Meeresneunauge">Meeresneunauge</string>
+    <string name="art.europa.Flussneunauge">Flussneunauge</string>
+    <string name="art.europa.Bachneunauge">Bachneunauge</string>
+    <string name="art.europa.Stoer">Stör</string>
+    <string name="art.europa.Sterlet">Sterlet</string>
+    <string name="art.europa.Hausen">Hausen</string>
+    <string name="art.europa.Aal">Aal</string>
+    <string name="art.europa.Finte">Finte</string>
+    <string name="art.europa.Bachforelle">Bachforelle</string>
+    <string name="art.europa.Meerforelle">Meerforelle</string>
+    <string name="art.europa.LachsAtlantischer">Lachs, atlantischer</string>
+    <string name="art.europa.Huchen">Huchen</string>
+    <string name="art.europa.Regenbogenforelle">Regenbogenforelle</string>
+    <string name="art.europa.Ketalachs">Ketalachs</string>
+    <string name="art.europa.Buckellachs">Buckellachs</string>
+    <string name="art.europa.Bachsaibling">Bachsaibling</string>
+    <string name="art.europa.Seesaibling">Seesaibling</string>
+    <string name="art.europa.Renke">Renke/ Maräne/ Felche</string>
+    <string name="art.europa.Aesche">Äsche</string>
+    <string name="art.europa.Stint">Stint</string>
+    <string name="art.europa.Hecht">Hecht</string>
+    <string name="art.europa.Hundsfisch">Hundsfisch</string>
+    <string name="art.europa.Ploetze">Plötze/ Rotauge</string>
+    <string name="art.europa.Frauennerfling">Frauennerfling/ Pigo</string>
+    <string name="art.europa.Perlfisch">Perlfisch/ Schwarzmeer-Plötze</string>
+    <string name="art.europa.Moderlieschen">Moderlieschen</string>
+    <string name="art.europa.Hasel">Hasel</string>
+    <string name="art.europa.Doebel">Döbel/ Aitel</string>
+    <string name="art.europa.Stroemer">Strömer</string>
+    <string name="art.europa.Orfe">Nerfling/ Orfe</string>
+    <string name="art.europa.Elritze">Elritze</string>
+    <string name="art.europa.Rotfeder">Rotfeder</string>
+    <string name="art.europa.Rapfen">Schied/ Rapfen</string>
+    <string name="art.europa.Nase">Nase</string>
+    <string name="art.europa.Mairenke">Mairenke</string>
+    <string name="art.europa.Ukelei">Laube/ Ukelei</string>
+    <string name="art.europa.Schneider">Schneider</string>
+    <string name="art.europa.Guester">Güster/ Blicke</string>
+    <string name="art.europa.Blei">Brachsen/ Blei</string>
+    <string name="art.europa.Zobel">Zobel</string>
+    <string name="art.europa.Zope">Zope</string>
+    <string name="art.europa.Zaehrte">Russnase/ Zährte</string>
+    <string name="art.europa.Ziege">Ziege/ Sichling</string>
+    <string name="art.europa.Graskarpfen">Graskarpfen/ Grasfisch</string>
+    <string name="art.europa.Gruendling">Gründling</string>
+    <string name="art.europa.Steingressling">Steingressling</string>
+    <string name="art.europa.Barbe">Barbe</string>
+    <string name="art.europa.Schleie">Schleie</string>
+    <string name="art.europa.Karausche">Karausche</string>
+    <string name="art.europa.Giebel">Giebel</string>
+    <string name="art.europa.Karpfen">Karpfen</string>
+    <string name="art.europa.Bitterling">Bitterling</string>
+    <string name="art.europa.Schmerle">Schmerle</string>
+    <string name="art.europa.Schlammpeitzger">Schlammpeitzger</string>
+    <string name="art.europa.Steinbeisser">Steinbeisser</string>
+    <string name="art.europa.Wels">Wels</string>
+    <string name="art.europa.ZwergwelsBrauner">Zwergwels, brauner</string>
+    <string name="art.europa.Quappe">Quappe/ Rutte/ Trüsche</string>
+    <string name="art.europa.MittelmeerKaerpfling">Mittelmeer-Kärpfling</string>
+    <string name="art.europa.KoboldKaerpfling">Gambuse/ Kobold-Kärpfling</string>
+    <string name="art.europa.AehrenfischKleiner">Ährenfisch, kleiner</string>
+    <string name="art.europa.StichlingDreistachliger">Stichling, dreistachliger</string>
+    <string name="art.europa.StichlingNeunstachliger">Stichling, neunstachliger/ Zwergstichling</string>
+    <string name="art.europa.Flussbarsch">Flussbarsch</string>
+    <string name="art.europa.Kaulbarsch">Kaulbarsch</string>
+    <string name="art.europa.Schraetzer">Schrätzer</string>
+    <string name="art.europa.Zander">Zander</string>
+    <string name="art.europa.Zingel">Zingel</string>
+    <string name="art.europa.Forellenbarsch">Forellenbarsch</string>
+    <string name="art.europa.Sonnenbarsch">Sonnenbarsch</string>
+    <string name="art.europa.SuesswasserSchleimfisch">Süsswasser-Schleimfisch</string>
+    <string name="art.europa.Marmorgrundel">Marmorgrundel</string>
+    <string name="art.europa.Groppe">Groppe/ Mühlkoppe</string>
+    <string name="art.europa.Flunder">Flunder</string>
+
 
     <!-- SQL-DB-Konstanten -->
 
